mobile z-index CSS fixes and minor tweaks

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -84,7 +84,7 @@ section, #leftAside div {
   align-items: center;
 	position: fixed;
 	width: 100%;
-	z-index: 1;
+	z-index: 2;
 }
 .top-bar .top-bar-wrap {
 	max-width: 1400px;
